tests/errors/test_74.xpp
// Cannot access private function via import access

import "foo" as foo;

fn main() void {
	let val = foo::get_one();
	let val2 = foo::get_two();

    foo::printf("hi!");
}
